2023-07-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCcse.c,
	  src/SDCCcse.h,
	  src/SDCCopt.c,
	  support/regression/tests/bug-3636.c:
	  Fix bug #3626.
	* src/SDCCsymt.c,
	  support/regression/tests/bug-3597.c:
	  Fix bug #3597.

2023-07-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib/mbrtowc.c,
	  support/regression/tests/wchar.c.in:
	  Fix an issue in the return value of mbrtowc for 0 character (it indirectly also affected mbrtoc16 and mbrtoc32).

2023-07-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix bug #3619.

2023-07-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/lib:
	  Spelling fixes, patch #465 by Konstantin Kim.

2023-07-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* _gptrget.c,
	* _gptrgetc.c,
	* _gptrput.c: applied patch #464, Thanks Konstantin Kim
	    also fixed/improved non-active SDCC_MODEL_MEDIUM variants of this lib

2023-07-21 Benedikt Freisen <b.freisen AT gmx.net>

	* doc/sdccman.lyx:
	  Update documentation of pragma sdcc_hash.

2023-07-17 Felix Salfelder <felix AT salfelder.org>

	* support/regression/cases/generate-cases.py:
	  Fix bug #3614.

2023-07-17 Felix Salfelder <felix AT salfelder.org>

	* support/regression/Makefile.in,
	  support/regression/compact-results.py:
	  Fix bug #3613.

2023-07-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/pdk/gen.c:
	  Fix bug #3615 for pdk15.

2023-07-13 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/_minimal.c:
	  Fix an accidentially comitted debug line.
	* src/stm8/gen.c:
	  Fix bug #3615 for stm8.

2023-07-10 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix a Z(1)80 bug in wide reads from pointers into registers.

2023-07-09 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCicode.c,
	  src/*/main.c:
	  Fix bug #3611 via patch by bbbbbr.
	* src/SDCCgenconstprop.cc: